--- a/Downloads/representplusGPTfresh/package.json
+++ b/Downloads/representplusGPTfresh/package.json
@@ -14,9 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.21",
+    "@types/node": "24.0.10",
+    "@types/react": "19.1.8",
     "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
   }
 }
