--- a/Downloads/representplusGPTfresh/package.json
+++ b/Downloads/representplusGPTfresh/package.json
@@ -12,7 +12,9 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.525.0",
     "next": "14.0.0",
+    "next-seo": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
