--- a/Downloads/representplusGPTfresh/package.json
+++ b/Downloads/representplusGPTfresh/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "airtable": "^0.12.2",
     "axios": "^1.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -18,7 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "zod": "^3.25.72"
   },
   "devDependencies": {
     "@types/node": "24.0.10",
